[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/enemies/WalkingDead.gd" type="Script" id=1]
[ext_resource path="res://assets/chararacters/enemies/cactus/Cactus (1).png" type="Texture" id=2]
[ext_resource path="res://assets/chararacters/enemies/cactus/Cactus (1) 2.png" type="Texture" id=3]
[ext_resource path="res://assets/chararacters/enemies/cactus/Cactus (1) 1.png" type="Texture" id=4]
[ext_resource path="res://assets/chararacters/enemies/boom/boom3.png" type="Texture" id=5]
[ext_resource path="res://assets/chararacters/enemies/boom/boom5.png" type="Texture" id=6]
[ext_resource path="res://assets/chararacters/enemies/boom/boom1.png" type="Texture" id=7]
[ext_resource path="res://assets/chararacters/enemies/boom/boom2.png" type="Texture" id=8]
[ext_resource path="res://assets/chararacters/enemies/boom/boom4.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "cactus_move",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "boom",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.0462, 44.1505 )

[sub_resource type="CircleShape2D" id=3]
radius = 14.5309

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.0235, 12.1478 )

[node name="Cactus" type="KinematicBody2D"]
light_mask = 2
position = Vector2( 0, -55.559 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 2
frames = SubResource( 1 )
animation = "cactus_move"
frame = 2
playing = true

[node name="body" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( -1.12247, 10.944 )
scale = Vector2( 1, 0.97671 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
scale = Vector2( 2.68, 1 )
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 5

[node name="top_checker" type="Area2D" parent="."]
light_mask = 2
collision_layer = 2
collision_mask = 9

[node name="top" type="CollisionShape2D" parent="top_checker"]
light_mask = 2
position = Vector2( -39.5903, -26.1395 )
shape = SubResource( 3 )

[node name="top2" type="CollisionShape2D" parent="top_checker"]
light_mask = 2
position = Vector2( 38.3217, -14.9022 )
shape = SubResource( 3 )

[node name="top3" type="CollisionShape2D" parent="top_checker"]
light_mask = 2
position = Vector2( 0, -41.1226 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="hit_checker" type="Area2D" parent="."]
scale = Vector2( 0.888399, 1.08685 )
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_checker"]
light_mask = 2
position = Vector2( -1.78681, 14.9706 )
scale = Vector2( 2.49388, 2.89233 )
shape = SubResource( 4 )

[node name="Timer2" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="BulletPos" type="Position2D" parent="."]
light_mask = -2147483648
position = Vector2( 43.6535, 33.7323 )
rotation = -1.57079
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="hit_checker" to="." method="_on_hit_checker_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
